use get to get the record from list